# steinadler

./: .gitignore  README.md  compile-pb.sh  mix.exs
config/: config.exs
lib/: native.ex  steinadler.ex
lib/steinadler/: native.ex
lib/steinadler/encoder/: encoder.ex  erlang_encoder.ex
lib/steinadler/node/: behaviour.ex  node.ex
lib/steinadler/node/client/native/: native.ex  native_node.ex
lib/steinadler/node/client/simple/: grpc_client.ex  simple_node.ex
lib/steinadler/process/: behaviour.ex  process.ex  supervisor.ex
lib/steinadler/protocol/v1/: message.pb.ex  system.pb.ex  term.pb.ex
lib/steinadler/streamref/: streamref.ex  streamref_producer.ex
lib/steinadler/tcp/: router_handler.ex  server.ex
native/steinadler/: Cargo.toml  README.md  build.rs
native/steinadler/proto/protocol/: dist.proto
native/steinadler/src/: lib.rs  server.rs
native/steinadler/src/protocol/: steinadler.dist.protocol.rs
priv/protos/eigr/steinadler/protocol/v1/: message.proto  system.proto  term.proto
priv/protos/protocol/: dist.proto
test/: encoder_test.exs  steinadler_test.exs
test/support/: mod.ex
