[package]
name = "steinadler"
version = "0.1.0"
description = "Erlang Distribution Protocol write in Rust"
keywords = [
    "erlang",
    "beam",
    "dist protocol",
    "cluster"
  ]
homepage = ""
documentation = ""
authors = ["Adriano Santos <sleipnir@bsd.com.br>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "steinadler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0"

futures = { version = "0.3.0", features = ["thread-pool"]}
tokio = { version = "1.9.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }