[package]
name = "steinadler"
version = "0.1.0"
description = "Erlang Distribution Protocol write in Rust"
keywords = [
    "erlang",
    "beam",
    "dist protocol",
    "cluster"
  ]
homepage = ""
documentation = ""
authors = ["Adriano Santos <sleipnir@bsd.com.br>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "steinadler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.10"
rustler = "0.22.0"
rsocket_rust = "0.7.1"
rsocket_rust_transport_tcp = "0.7.1"
tokio = { version = "1.0.3", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
bytes        = "1"
rustc_version = "0.4.0"
log           = "0.4.14"
env_logger    = "0.8.3"
log4rs        = "1.0.0"

